== Version 2.7 Work in progress (not released -- this is a draft) ==

  Users side :
  ------------
    # Apps :
        * Creme_config :
            - In the bricks configuration, default configuration is used as initial value when it's relevant
              (instead of starting with an empty configuration).
            - A view which displays all "FileRefs" (temporary files) has been added; it's only available for staff users.
        * Opportunities :
            - You can now create unsuccessful phone calls from an Opportunity's detail-view :
                - A button has been added (not enabled in default installations).
                - In the block "Linked Contacts", you can activate an new action in the configuration (idem).

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # Deprecations :
            - The method 'creme_core.models.creme_property.CremePropertyTypeManager.smart_update_or_create() is deprecated;
              use the classical methods 'create()' or 'update_or_create()' instead.
              Notice: if you still want to set the field "subject_ctypes" from models like before,
                      you can use the new method 'CremePropertyType.set_subject_ctypes()'.
            - The method 'creme_core.tests.base._CremeTestCase.assertRelationCount' is deprecated;
              use the new methods 'assertHaveRelation()' & 'assertHaveNoRelation()' instead.
        # The model 'creme_core.models.FileRef' get a new optional field "description";
          it's used by the new view which displays all FileRefs (so feel free to fill it).

    Breaking changes :
    ------------------
        # Deprecated stuffs which have been removed :
            - In 'creme_core.gui' :
                - In 'field_printers', the function 'image_size()' & the constants MAX_HEIGHT/MAX_WIDTH has been removed.
                - In the class 'mass_import.FormRegistry' :