@@ -25,7 +25,7 @@
     {% if custom %}
       {% brick_table_column title=_('Actions') status='action' colspan=3 %}
     {% else %}
-      {% brick_table_column title=_('Actions') status='action' colspan=1 %}
+      {% brick_table_column title=_('Actions') status='action' colspan=2 %}
     {% endif %}
 {% endblock %}
 
@@ -56,17 +56,21 @@
             {% brick_table_action id='update' url='creme_config__enable_rtype'|url:relation_type.id  label=_('Enable')  display='text' enabled=admin_perm %}
           {% endif %}
         </td>
+        <td {% brick_table_data_status action %}>
+          {% if relation_type.enabled %}
+           {% if custom %}
+            {% brick_table_action id='edit' url='creme_config__edit_rtype'|url:relation_type.id label=_('Edit this relation type') enabled=admin_perm %}
+           {% else %}
+            {% brick_table_action id='edit' url='creme_config__edit_not_custom_rtype'|url:relation_type.id label=_('Edit this relation type') enabled=admin_perm %}
+           {% endif %}
+          {% else %}
+            {% brick_table_action id='edit' label=_('You cannot edit a disabled relation type') enabled=False %}
+          {% endif %}
+        </td>
         {% if custom %}
-          <td {% brick_table_data_status action %}>
-            {% if relation_type.enabled %}
-              {% brick_table_action id='edit' url='creme_config__edit_rtype'|url:relation_type.id label=_('Edit this relation type') enabled=admin_perm %}
-            {% else %}
-              {% brick_table_action id='edit' label=_('You cannot edit a disabled relation type') enabled=False %}
-            {% endif %}
-          </td>
-          <td {% brick_table_data_status action %}>
-              {% brick_table_action id='delete' url=delete_url __id=relation_type.id label=_('Delete this relation type') enabled=admin_perm %}
-          </td>
+         <td {% brick_table_data_status action %}>
+            {% brick_table_action id='delete' url=delete_url __id=relation_type.id label=_('Delete this relation type') enabled=admin_perm %}
+         </td>
         {% endif %}
     </tr>
    {% endwith %}
